Alignment Fix

--- a/5.Size_Position_Lists.css
+++ b/5.Size_Position_Lists.css
@@ -1,7 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-}
 html,body{
     height: 100%;
 }
@@ -9,7 +5,7 @@ body{
     background-color: cyan;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
 div{
@@ -20,4 +16,5 @@ div{
     border: 5px black solid;
     background-color: yellow;
     text-align: center;
+    font-size: 50px;
 }
